--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,9 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script>
-    document.getElementById('root').innerHTML =
-      marked('# Marked in browser\n\nRendered by **marked**.', {
-        gfm: true
-      });
-  </script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
